<resources>
    <string name="app_name">Slurp</string>
    <string name="menu_item_food">CIBO</string>
    <string name="menu_item_profile">PROFILO</string>
    <string name="menu_item_daily">Giorno</string>
    <string name="menu_item_weekly">Settimana</string>
    <string name="menu_item_occasionally">Voluttuario</string>
    <string name="height">Altezza</string>
    <string name="weight">Peso</string>
    <string name="caloric_intake">Assunzione calorica</string>
    <string name="low">Basso</string>
    <string name="medium">Medio</string>
    <string name="high">Alto</string>
    <string name="history">Cronologia</string>
    <string name="defaut_height">0</string>
    <string name="default_weight">0</string>
    <string name="unit_of_measurement_height">cm</string>
    <string name="unit_of_measurement_weight">kg</string>
    <string name="content_descriptor_image_profile">Image Profile</string>
    <string name="content_descriptor_image_marker">Marker Well Played</string>
    <string name="default_data">01 Gennaio 1900</string>
    <string name="text_saparator">-</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="basso_title">BASSO</string>
    <string name="basso_info">1500 kcal</string>
    <string name="medio_title">MEDIO</string>
    <string name="medio_info">2000 kcal</string>
    <string name="alto_title">ALTO</string>
    <string name="alto_info">2500 kcal</string>
</resources>